0.64.2
------
1. Disable button order userChrome.css mods for Thunderbird>=3

0.64.1
------
1. When using shaded combo buttons, use the combo splitter setting to
   determine if there should be a border between the shaded and unshaded parts.
2. Make menubar items selectable right up to the top edge of the menubar.
3. Fix clipping of close icon on GEdit tabs.

0.64.0
------
 1. Add option to not draw border around popupmenus.
 2. Add option to unify spinbuttons.
 3. Add option to set sub-menu delay (default 100ms)
 4. Use equal top/bottom padding on popupmenu separators.
 5. Add option to colour arrow part of combobox.
 6. Draw resize grip as a darkend triangle.
 7. Add a 'thick colored border' mouse over type.
 8. Allow to darken sliders.
 9. Add new default button indicator - darken.
10. Harmonize KDE4 & Gtk2 popupmenu overlaps.
11. Slightly changed min width/height of when buttons can be max
    rounded - fixes some issues with firefox.
12. Fix scrollbar background when using thinner grooves.
13. Under KDE4 (KDE_SESSION_VERSION>=4), default hover/focus colours to the
    KDE4 defaults.
14. Fix firefox crashing when scrollbar slider move to top. This only occurs
    when not using flat scrollbar buttons, and a coloured scrollbar slider.
15. Dont draw frame around GEdits combos in its status bar - unless
    drawStatusBarFrames is set to true.
16. Dont attempt alter OK/Cancel button for Firefox 3.5 - seems to mess up
    preferences dialog.
17. Replace QtCurve's menubar mouse-over code with that from the glide engine.

0.63.0
------
 1. Add '3dfull' to gradient border options. This forces the
    dark, as well as the light, portion to be drawn.
 2. Use a lighter shade for the dark portion of gradient border.
 3. Flat dot for radio buttons.
 4. Option to use button colour for listview headers.
 5. Use KDE4 colors for focus and mouse-over.
 6. Removal of background focus option.
 7. Softer, and much nicer, colouration of selected tab.