@@ -1667,7 +1667,7 @@ static void drawLightBevel(cairo_t *cr, GtkStyle *style, GdkWindow *window, GtkS
     xd-=1, x--, yd-=1, y--, width+=2, height+=2;
     if(flags&DF_DO_BORDER && width>2 && height>2)
     {
-        GdkColor *borderCols=WIDGET_COMBO==widget && colors==qtcPalette.combobtn
+        GdkColor *borderCols=(WIDGET_COMBO==widget || WIDGET_COMBO_BUTTON==widget) && colors==qtcPalette.combobtn
                             ? GTK_STATE_PRELIGHT==state && MO_GLOW==opts.coloredMouseOver && !sunken
                                 ? &qtcPalette.mouseover
                                 : &qtcPalette.button[PAL_ACTIVE]
@@ -1675,10 +1675,17 @@ static void drawLightBevel(cairo_t *cr, GtkStyle *style, GdkWindow *window, GtkS
                             
         cairo_new_path(cr);
         /* Yuck! this is a mess!!!! */
-        if(!sunken && (doEtch || WIDGET_SB_SLIDER==widget) &&
-            ( (WIDGET_OTHER!=widget && WIDGET_SLIDER_TROUGH!=widget && WIDGET_COMBO_BUTTON!=widget &&
-                MO_GLOW==opts.coloredMouseOver && GTK_STATE_PRELIGHT==state) ||
-              (WIDGET_DEF_BUTTON==widget && IND_GLOW==opts.defBtnIndicator)))
+// Copied from KDE4 version...
+        if(!sunken && GTK_STATE_INSENSITIVE!=state &&
+            ( ( ( (doEtch && WIDGET_OTHER!=widget && WIDGET_SLIDER_TROUGH!=widget) || WIDGET_SB_SLIDER==widget || WIDGET_COMBO==widget || WIDGET_MENU_BUTTON==widget ) &&
+                 (MO_GLOW==opts.coloredMouseOver/* || MO_COLORED==opts.colorMenubarMouseOver*/) && GTK_STATE_PRELIGHT==state) ||
+               (doEtch && WIDGET_DEF_BUTTON==widget && IND_GLOW==opts.defBtnIndicator)))
+
+// Previous Gtk2...        
+//         if(!sunken && (doEtch || WIDGET_SB_SLIDER==widget) &&
+//             ( (WIDGET_OTHER!=widget && WIDGET_SLIDER_TROUGH!=widget && WIDGET_COMBO_BUTTON!=widget &&
+//                 MO_GLOW==opts.coloredMouseOver && GTK_STATE_PRELIGHT==state) ||
+//               (WIDGET_DEF_BUTTON==widget && IND_GLOW==opts.defBtnIndicator)))
             drawBorder(cr, style, state, area, region, x, y, width, height,
                        WIDGET_DEF_BUTTON==widget && IND_GLOW==opts.defBtnIndicator &&
                        (GTK_STATE_PRELIGHT!=state || !qtcPalette.mouseover)
